--- a/package.json
+++ b/package.json
@@ -1,21 +1,58 @@
 {
-  "name": "nextjs-boilerplate-latest",
+  "name": "nextjs-boilerplate",
+  "license": "MIT",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "build": "rome check . && next build",
+    "prepare": "husky install",
+    "postbuild": "next-sitemap --config next.sitemap.js"
   },
   "dependencies": {
-    "@next/font": "13.1.2",
+    "@dotlottie/player-component": "^1.3.1",
+    "@heroicons/react": "^2.0.13",
+    "@hookform/resolvers": "^2.9.10",
+    "@nanostores/react": "^0.4.1",
+    "@radix-ui/react-alert-dialog": "^1.0.2",
+    "@radix-ui/react-checkbox": "^1.0.1",
+    "@radix-ui/react-label": "^2.0.0",
+    "@radix-ui/react-navigation-menu": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.1.0",
+    "@radix-ui/react-select": "^1.1.2",
+    "@rive-app/react-canvas": "^3.0.34",
+    "axios": "^1.2.2",
+    "class-variance-authority": "^0.4.0",
+    "country-calling-code": "^0.0.3",
+    "framer-motion": "^10.2.4",
+    "libphonenumber-js": "^1.10.18",
+    "lodash": "^4.17.21",
+    "nanostores": "^0.7.1",
+    "next": "^13.2.4",
+    "plaiceholder": "^2.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-use": "^17.4.0",
+    "renex": "^0.2.0",
+    "sharp": "^0.31.3",
+    "sonner": "^0.1.1",
+    "swr": "^2.0.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@total-typescript/ts-reset": "^0.3.7",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "next": "13.1.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "autoprefixer": "^10.4.13",
+    "husky": "^8.0.3",
+    "next-sitemap": "^3.1.45",
+    "postcss": "^8.4.21",
+    "rome": "^11.0.0",
+    "tailwindcss": "^3.2.4",
+    "tailwindcss-radix": "^2.6.2",
+    "typescript": "^4.9.5"
   }
 }
